<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendrier">


    <fragment
        android:id="@+id/navigation_calendrier"
        android:name="com.example.optimealapp.ui.calendrier.CalendrierFragment"
        android:label="@string/title_calendrier"
        tools:layout="@layout/fragment_calendrier_old" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.optimealapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_liste"
        android:name="com.example.optimealapp.ui.liste.ListeFragment"
        android:label="@string/title_liste"
        tools:layout="@layout/fragment_liste" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.optimealapp.ProfilFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profil" />
</navigation>